cncProd/force-app/main/default/objects/InvoiceSeqNum__c/InvoiceSeqNum__c.object-meta.xml
<CustomObject>
    <description>Specify the Invoice Running Number</description>
    <label>Invoice Sequence Number</label>
    <nameField>
        <displayFormat>INVSEQ-{00000000}</displayFormat>
        <label>SequenceName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Sequence Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>