cncProd/force-app/main/default/objects/InvoiceSeqNum__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campaign related to the invoice running number</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>InvoiceRunningNumbers</relationshipName>
    <type>Lookup</type>
</CustomField>