cncProd/force-app/main/default/objects/InvoiceSeqNum__c/fields/MBSeqNum__c.field-meta.xml
<CustomField>
    <fullName>MBSeqNum__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>For Mercedes-Benz events, this value defaults to 0.</inlineHelpText>
    <label>MB Running Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>