cncProd/force-app/main/default/objects/InvoiceSeqNum__c/fields/MerchandiseSeqNum__c.field-meta.xml
<CustomField>
    <fullName>MerchandiseSeqNum__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Merchandise Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>