cncProd/force-app/main/default/objects/InvoiceSeqNum__c/fields/MITSeqNum__c.field-meta.xml
<CustomField>
    <fullName>MITSeqNum__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>For Mitsubishi events, this value defaults to 0.</inlineHelpText>
    <label>Mitsubishi Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>