cncProd/force-app/main/default/objects/InvoiceSeqNum__c/fields/ServicePackageSeqNum__c.field-meta.xml
<CustomField>
    <fullName>ServicePackageSeqNum__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Service Package Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>